avatar-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avatar-service
spec:
  selector:
    app: avatar-service
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 9100
    targetPort: metrics
  type: ClusterIP
