avatar-service/templates/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: avatar-service-netpol
spec:
  podSelector:
    matchLabels:
      app: avatar-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress-nginx-controller
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
  - ports:
    - protocol: TCP
      port: 443
